# ChangeLog for sys-fs/udev
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.999 2014/02/26 18:20:37 ssuominen Exp $

  26 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-9999.ebuild:
  Install systemd.link(5) manpage since the information for configuring
  99-default.link moved to there from udev(7) wrt http://cgit.freedesktop.org/sy
  stemd/systemd/commit/?id=1ff28eaee33d9d0cee46bd176b6d6f8805c95036

  25 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-210.ebuild:
  Release >=sys-fs/udev-210 to ~arch since the information about the network
  interface configuration filename change was released as a Portage news item.

  25 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-210.ebuild,
  udev-9999.ebuild:
  Punt entire CONFIG_DMIID check which seems to be more optional than README
  seems to suggest, and the feature isn't available for every arch.

  25 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-210.ebuild,
  udev-9999.ebuild:
  Check CONFIG_DMIID only for amd64, ia64 and x86.

  25 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> -udev-209.ebuild:
  old

*udev-210 (25 Feb 2014)

  25 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> +udev-210.ebuild:
  Version bump.

  24 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-209.ebuild,
  udev-9999.ebuild:
  Update kernel req. CONFIG_NET and CONFIG_DMIID (dmi is used in
  60-keyboard.rules for example) from README.

  24 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-209.ebuild,
  udev-9999.ebuild:
  Stop installing udevd.8 since we don't install the legacy /sbin/udevd anymore
  and instead of creating a .so manpage link from systemd-udevd.service.8 to
  systemd-udevd.8, rename the file directly to systemd-udevd.8 since we don't
  install the systemd-udevd.service from sys-fs/udev.

  24 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-9999.ebuild: