@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.999 2014/02/26 18:20:37 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1000 2014/02/26 18:40:51 ssuominen Exp $
+
+  26 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-210.ebuild,
+  udev-9999.ebuild:
+  Pull in sys-libs/libcap but only in DEPEND for sys/capability.h because
+  nothing in sys-fs/udev links against the actual library wrt #502548
 
   26 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> udev-9999.ebuild:
   Install systemd.link(5) manpage since the information for configuring
